# ipinyou-ctr-campaign-analysis

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml  requirements.txt  run_ctr_experiments.py  run_pipeline.py
notebooks/: 01_eda_campaign_analysis.ipynb  02_ctr_modeling.ipynb
src/ipinyou_analysis/: __init__.py  analysis.py  data.py  features.py  modeling.py  plotting.py
