[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipinyou-ctr-campaign-analysis"
version = "0.1.0"
description = "CTR prediction and campaign performance analysis with the iPinYou RTB dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
